// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignUpForNotifications
    aClass={
      Class {
        "classId": "1210",
        "coreqs": Object {
          "type": "or",
          "values": Array [],
        },
        "crns": Array [
          "13502",
          "13503",
          "14386",
          "14404",
          "14405",
        ],
        "desc": "Continues the preparation of students for careers in the computing and information fields by discussing co-op and co-op processes. Offers students an opportunity to prepare a professional résumé; practice proper interviewing techniques; explore current job opportunities; learn how to engage in the job and referral process; and to understand co-op policies, procedures, and expectations. Discusses professional behavior and ethical issues in the workplace. 1.000 Lecture hours",
        "hasWaitList": false,
        "honors": false,
        "host": "neu.edu",
        "isString": false,
        "lastUpdateTime": 1511131674191,
        "maxCredits": 1,
        "minCredits": 1,
        "name": "Computer Science/Information Science Overview 2: Co-op Preparation",
        "optPrereqsFor": Object {
          "values": Array [],
        },
        "prereqs": Object {
          "type": "or",
          "values": Array [],
        },
        "prereqsFor": Object {
          "values": Array [],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201810&subj_code_in=CS&crse_numb_in=1210",
        "sections": Array [
          Section {
            "classId": "1210",
            "crn": "13502",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914029,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T11:30:00.000Z",
                      "start": "1970-01-06T09:50:00.000Z",
                    },
                  ],
                ],
                "where": "Snell Engineering Center 108",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "14404",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914065,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 431",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "14405",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914065,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 431",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "13503",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914063,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Melissa Anne Irgens Peikin",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T11:30:00.000Z",
                      "start": "1970-01-06T09:50:00.000Z",
                    },
                  ],
                ],
                "where": "Churchill Hall 103",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 6,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13503",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "14386",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914075,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Yasmil Montes",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 293",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14386",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
        ],
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201810&subj_in=CS&crse_in=1210&schd_in=%",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Button
          as="button"
          basic={true}
          className="notificationButton"
          content="Get notified when seats open up!"
          onClick={[Function]}
          role="button"
        />,
        <Modal
          actions={
            Array [
              Object {
                "content": "Ok",
                "key": "done",
                "onClick": [Function],
                "positive": true,
              },
            ]
          }
          centered={true}
          className="adblock-notification-modal-container"
          closeOnDimmerClick={true}
          closeOnDocumentClick={false}
          content="Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com."
          dimmer={true}
          eventPool="Modal"
          header="Please disable adblock and sign into Facebook."
          open={false}
        />,
      ],
      "className": "sign-up-for-notifications-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "as": "button",
          "basic": true,
          "className": "notificationButton",
          "content": "Get notified when seats open up!",
          "onClick": [Function],
          "role": "button",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "actions": Array [
            Object {
              "content": "Ok",
              "key": "done",
              "onClick": [Function],
              "positive": true,
            },
          ],
          "centered": true,
          "className": "adblock-notification-modal-container",
          "closeOnDimmerClick": true,
          "closeOnDocumentClick": false,
          "content": "Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com.",
          "dimmer": true,
          "eventPool": "Modal",
          "header": "Please disable adblock and sign into Facebook.",
          "open": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Button
            as="button"
            basic={true}
            className="notificationButton"
            content="Get notified when seats open up!"
            onClick={[Function]}
            role="button"
          />,
          <Modal
            actions={
              Array [
                Object {
                  "content": "Ok",
                  "key": "done",
                  "onClick": [Function],
                  "positive": true,
                },
              ]
            }
            centered={true}
            className="adblock-notification-modal-container"
            closeOnDimmerClick={true}
            closeOnDocumentClick={false}
            content="Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com."
            dimmer={true}
            eventPool="Modal"
            header="Please disable adblock and sign into Facebook."
            open={false}
          />,
        ],
        "className": "sign-up-for-notifications-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "as": "button",
            "basic": true,
            "className": "notificationButton",
            "content": "Get notified when seats open up!",
            "onClick": [Function],
            "role": "button",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "actions": Array [
              Object {
                "content": "Ok",
                "key": "done",
                "onClick": [Function],
                "positive": true,
              },
            ],
            "centered": true,
            "className": "adblock-notification-modal-container",
            "closeOnDimmerClick": true,
            "closeOnDocumentClick": false,
            "content": "Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com.",
            "dimmer": true,
            "eventPool": "Modal",
            "header": "Please disable adblock and sign into Facebook.",
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`should render the fb button after the button is clicked 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SignUpForNotifications
    aClass={
      Class {
        "classId": "1210",
        "coreqs": Object {
          "type": "or",
          "values": Array [],
        },
        "crns": Array [
          "13502",
          "13503",
          "14386",
          "14404",
          "14405",
        ],
        "desc": "Continues the preparation of students for careers in the computing and information fields by discussing co-op and co-op processes. Offers students an opportunity to prepare a professional résumé; practice proper interviewing techniques; explore current job opportunities; learn how to engage in the job and referral process; and to understand co-op policies, procedures, and expectations. Discusses professional behavior and ethical issues in the workplace. 1.000 Lecture hours",
        "hasWaitList": false,
        "honors": false,
        "host": "neu.edu",
        "isString": false,
        "lastUpdateTime": 1511131674191,
        "maxCredits": 1,
        "minCredits": 1,
        "name": "Computer Science/Information Science Overview 2: Co-op Preparation",
        "optPrereqsFor": Object {
          "values": Array [],
        },
        "prereqs": Object {
          "type": "or",
          "values": Array [],
        },
        "prereqsFor": Object {
          "values": Array [],
        },
        "prettyUrl": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_course_detail?cat_term_in=201810&subj_code_in=CS&crse_numb_in=1210",
        "sections": Array [
          Section {
            "classId": "1210",
            "crn": "13502",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914029,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T11:30:00.000Z",
                      "start": "1970-01-06T09:50:00.000Z",
                    },
                  ],
                ],
                "where": "Snell Engineering Center 108",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "14404",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914065,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 431",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "14405",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914065,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Jennifer Anne Shire",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 431",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14404",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "13503",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914063,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Melissa Anne Irgens Peikin",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T11:30:00.000Z",
                      "start": "1970-01-06T09:50:00.000Z",
                    },
                  ],
                ],
                "where": "Churchill Hall 103",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 6,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13503",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
          Section {
            "classId": "1210",
            "crn": "14386",
            "host": "neu.edu",
            "lastUpdateTime": 1511131914075,
            "meetings": Array [
              Meeting {
                "endDate": "2017-12-07T00:00:00.000Z",
                "profs": Array [
                  "Yasmil Montes",
                ],
                "startDate": "2017-09-07T00:00:00.000Z",
                "times": Array [
                  Array [
                    Object {
                      "end": "1970-01-06T13:25:00.000Z",
                      "start": "1970-01-06T11:45:00.000Z",
                    },
                  ],
                ],
                "where": "Ryder Hall 293",
              },
            ],
            "online": false,
            "seatsCapacity": 19,
            "seatsRemaining": 0,
            "subject": "CS",
            "termId": "201810",
            "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=14386",
            "waitCapacity": 0,
            "waitRemaining": 0,
          },
        ],
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckctlg.p_disp_listcrse?term_in=201810&subj_in=CS&crse_in=1210&schd_in=%",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="facebookButtonContainer"
        >
          <div
            className="sendToMessengerButtonLabel"
          >
            Click this button to continue
          </div>
          <div
            className="inlineBlock"
          >
            <div
              className="fb-send-to-messenger sendToMessengerButton"
              color="white"
              data-ref="eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9"
              messenger_app_id="1979224428978082"
              page_id="807584642748179"
              size="large"
            />
          </div>
        </div>,
        <Modal
          actions={
            Array [
              Object {
                "content": "Ok",
                "key": "done",
                "onClick": [Function],
                "positive": true,
              },
            ]
          }
          centered={true}
          className="adblock-notification-modal-container"
          closeOnDimmerClick={true}
          closeOnDocumentClick={false}
          content="Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com."
          dimmer={true}
          eventPool="Modal"
          header="Please disable adblock and sign into Facebook."
          open={false}
        />,
      ],
      "className": "sign-up-for-notifications-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="sendToMessengerButtonLabel"
            >
              Click this button to continue
            </div>,
            <div
              className="inlineBlock"
            >
              <div
                className="fb-send-to-messenger sendToMessengerButton"
                color="white"
                data-ref="eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9"
                messenger_app_id="1979224428978082"
                page_id="807584642748179"
                size="large"
              />
            </div>,
          ],
          "className": "facebookButtonContainer",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Click this button to continue",
              "className": "sendToMessengerButtonLabel",
            },
            "ref": null,
            "rendered": "Click this button to continue",
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="fb-send-to-messenger sendToMessengerButton"
                color="white"
                data-ref="eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9"
                messenger_app_id="1979224428978082"
                page_id="807584642748179"
                size="large"
              />,
              "className": "inlineBlock",
            },
            "ref": [Function],
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "fb-send-to-messenger sendToMessengerButton",
                "color": "white",
                "data-ref": "eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9",
                "messenger_app_id": "1979224428978082",
                "page_id": "807584642748179",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "actions": Array [
            Object {
              "content": "Ok",
              "key": "done",
              "onClick": [Function],
              "positive": true,
            },
          ],
          "centered": true,
          "className": "adblock-notification-modal-container",
          "closeOnDimmerClick": true,
          "closeOnDocumentClick": false,
          "content": "Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com.",
          "dimmer": true,
          "eventPool": "Modal",
          "header": "Please disable adblock and sign into Facebook.",
          "open": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="facebookButtonContainer"
          >
            <div
              className="sendToMessengerButtonLabel"
            >
              Click this button to continue
            </div>
            <div
              className="inlineBlock"
            >
              <div
                className="fb-send-to-messenger sendToMessengerButton"
                color="white"
                data-ref="eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9"
                messenger_app_id="1979224428978082"
                page_id="807584642748179"
                size="large"
              />
            </div>
          </div>,
          <Modal
            actions={
              Array [
                Object {
                  "content": "Ok",
                  "key": "done",
                  "onClick": [Function],
                  "positive": true,
                },
              ]
            }
            centered={true}
            className="adblock-notification-modal-container"
            closeOnDimmerClick={true}
            closeOnDocumentClick={false}
            content="Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com."
            dimmer={true}
            eventPool="Modal"
            header="Please disable adblock and sign into Facebook."
            open={false}
          />,
        ],
        "className": "sign-up-for-notifications-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="sendToMessengerButtonLabel"
              >
                Click this button to continue
              </div>,
              <div
                className="inlineBlock"
              >
                <div
                  className="fb-send-to-messenger sendToMessengerButton"
                  color="white"
                  data-ref="eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9"
                  messenger_app_id="1979224428978082"
                  page_id="807584642748179"
                  size="large"
                />
              </div>,
            ],
            "className": "facebookButtonContainer",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Click this button to continue",
                "className": "sendToMessengerButtonLabel",
              },
              "ref": null,
              "rendered": "Click this button to continue",
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div
                  className="fb-send-to-messenger sendToMessengerButton"
                  color="white"
                  data-ref="eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9"
                  messenger_app_id="1979224428978082"
                  page_id="807584642748179"
                  size="large"
                />,
                "className": "inlineBlock",
              },
              "ref": [Function],
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "className": "fb-send-to-messenger sendToMessengerButton",
                  "color": "white",
                  "data-ref": "eyJjbGFzc0hhc2giOiJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwIiwic2VjdGlvbkhhc2hlcyI6WyJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzEzNTAyIiwibmV1LmVkdS8yMDE4MTAvQ1MvMTIxMC8xNDQwNCIsIm5ldS5lZHUvMjAxODEwL0NTLzEyMTAvMTQ0MDUiLCJuZXUuZWR1LzIwMTgxMC9DUy8xMjEwLzE0Mzg2Il0sImRldiI6ZmFsc2UsImxvZ2luS2V5IjoiMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMDAwMCJ9",
                  "messenger_app_id": "1979224428978082",
                  "page_id": "807584642748179",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": "div",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "actions": Array [
              Object {
                "content": "Ok",
                "key": "done",
                "onClick": [Function],
                "positive": true,
              },
            ],
            "centered": true,
            "className": "adblock-notification-modal-container",
            "closeOnDimmerClick": true,
            "closeOnDocumentClick": false,
            "content": "Please open a new tab and ensure you are signed into Facebook. Also, make sure to disable any ad blocking extentions because this feature does not work when adblock is enabled. If you are using Safari, try using a different browser. If you can't get it working send me a message at ryanhughes624@gmail.com.",
            "dimmer": true,
            "eventPool": "Modal",
            "header": "Please disable adblock and sign into Facebook.",
            "open": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
